<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Learn with Alphonso</string>
    <string name="streak_widget_description">Your streak and whether you studied today</string>
</resources>
